--- a/main.html
+++ b/main.html
@@ -24,11 +24,11 @@
 	</ul>
 	
 	  
-		<li>Cloud Development</li>
-		<li>Desktop Development</li>
-		<li>Video Sport Development</li>
-		<li>Mobile Development</li>
-		<li>Web Development</li>
+		<li>Cloud development</li>
+		<li>Desktop development</li>
+		<li>Video Sport development</li>
+		<li>Mobile development</li>
+		<li>Web development</li>
 	
     <script type="text/javascript" src="./script.js">
 </script>
